js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-async-gen-await-script-code-valid.js
var
smoosh
;
function
smoosh
(
)
{
}
async
function
*
f
(
)
{
await
import
(
'
.
/
empty_FIXTURE
.
js
'
)
}
reportCompare
(
0
0
)
;
